added svg icons

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/images/nt-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Natural Travel</title>
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    /> -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
@@ -771,9 +771,14 @@
             <div
               class="group-hover:bg-gradient-to-b from-teal-100 p-5 rounded-lg"
             >
-              <i
+              <!-- <i
                 class="fa-solid fa-location-dot text-secondary-color bg-orange-100 p-2 rounded-full"
-              ></i>
+              ></i> -->
+              <img
+                class="w-5 bg-orange-100 p-1 rounded-full inline"
+                src="images/location-dot.svg"
+                alt="location"
+              />
               <span class="text-gray-400">Buenos Aires, Argentina </span>
               <h3 class="text-2xl font-bold my-2">Argentina</h3>
               <img
@@ -782,11 +787,30 @@
                 alt=""
               />
               <div class="text-gray-400 flex justify-around items-center mt-1">
-                <p>10 activities</p>
-                <div>
-                  <i class="fa-solid fa-map-location-dot"></i> 12 places
+                <div class="">
+                  <img
+                    class="w-5 inline mb-1"
+                    src="/images/person-biking-mountain.svg"
+                    alt="activities"
+                  />
+                  <span>10 activities </span>
                 </div>
-                <div><i class="fa-solid fa-calendar-days"></i> 1 week</div>
+                <div class="">
+                  <img
+                    class="w-5 inline mb-1"
+                    src="/images/map-location-dot.svg"
+                    alt="map"
+                  />
+                  <span> 12 places </span>
+                </div>
+                <div class="">
+                  <img
+                    class="w-4 inline mb-1"
+                    src="/images/calendar-days.svg"
+                    alt="calendar"
+                  />
+                  <span>1 week </span>
+                </div>
               </div>
               <hr class="border" />
               <div class="flex items-center mt-3 justify-around">
@@ -806,9 +830,11 @@
             <div
               class="group-hover:bg-gradient-to-b from-teal-100 p-5 rounded-lg"
             >
-              <i
-                class="fa-solid fa-location-dot text-secondary-color bg-orange-100 p-2 rounded-full"
-              ></i>
+              <img
+                class="w-5 bg-orange-100 p-1 rounded-full inline"
+                src="images/location-dot.svg"
+                alt="location"
+              />
               <span class="text-gray-400">Light, House </span>
               <h3 class="text-2xl font-bold my-2">Lighthouse</h3>
               <img
@@ -817,11 +843,30 @@
                 alt=""
               />
               <div class="text-gray-400 flex justify-around items-center mt-1">
-                <p>10 activities</p>
-                <div>
-                  <i class="fa-solid fa-map-location-dot"></i> 12 places
+                <div class="">
+                  <img
+                    class="w-5 inline mb-1"
+                    src="/images/person-biking-mountain.svg"
+                    alt="activities"
+                  />
+                  <span>10 activities </span>
                 </div>
-                <div><i class="fa-solid fa-calendar-days"></i> 1 week</div>
+                <div class="">
+                  <img
+                    class="w-5 inline mb-1"
+                    src="/images/map-location-dot.svg"
+                    alt="map"
+                  />
+                  <span> 12 places </span>
+                </div>
+                <div class="">
+                  <img
+                    class="w-4 inline mb-1"
+                    src="/images/calendar-days.svg"
+                    alt="calendar"
+                  />
+                  <span>1 week </span>
+                </div>
               </div>
               <hr class="border" />
               <div class="flex items-center mt-3 justify-around">
@@ -841,9 +886,11 @@
             <div
               class="group-hover:bg-gradient-to-b from-teal-100 p-5 rounded-lg"
             >
-              <i
-                class="fa-solid fa-location-dot text-secondary-color bg-orange-100 p-2 rounded-full"
-              ></i>
+              <img
+                class="w-5 bg-orange-100 p-1 rounded-full inline"
+                src="images/location-dot.svg"
+                alt="location"
+              />
               <span class="text-gray-400">Green, Forest </span>
               <h3 class="text-2xl font-bold my-2">Green Forest</h3>
               <img
@@ -852,11 +899,30 @@
                 alt=""
               />
               <div class="text-gray-400 flex justify-around items-center mt-1">
-                <p>10 activities</p>
-                <div>
-                  <i class="fa-solid fa-map-location-dot"></i> 12 places
+                <div class="">
+                  <img
+                    class="w-5 inline mb-1"
+                    src="/images/person-biking-mountain.svg"
+                    alt="activities"
+                  />
+                  <span>10 activities </span>
                 </div>
-                <div><i class="fa-solid fa-calendar-days"></i> 1 week</div>
+                <div class="">
+                  <img
+                    class="w-5 inline mb-1"
+                    src="/images/map-location-dot.svg"
+                    alt="map"
+                  />
+                  <span> 12 places </span>
+                </div>
+                <div class="">
+                  <img
+                    class="w-4 inline mb-1"
+                    src="/images/calendar-days.svg"
+                    alt="calendar"
+                  />
+                  <span>1 week </span>
+                </div>
               </div>
               <hr class="border" />
               <div class="flex items-center mt-3 justify-around">
@@ -1026,10 +1092,10 @@
       });
     </script>
 
-    <script
+    <!-- <script
       src="https://kit.fontawesome.com/c5b8b41db0.js"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
     <!-- navbar -->
   </body>
 </html>
