--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
           type="radio"
           name="my_tabs_2"
           role="tab"
-          class="tab h-24 bg-white"
+          class="tab h-24 bg-white mx-1"
           aria-label="Rents"
         />
 
@@ -424,7 +424,7 @@
           type="radio"
           name="my_tabs_2"
           role="tab"
-          class="tab h-24 bg-white"
+          class="tab h-24 bg-white mx-1"
           aria-label="Tours"
         />
 
@@ -520,7 +520,7 @@
           type="radio"
           name="my_tabs_2"
           role="tab"
-          class="tab h-24 bg-white"
+          class="tab h-24 bg-white mr-1"
           aria-label="Works"
         />
 
@@ -771,9 +771,6 @@
             <div
               class="group-hover:bg-gradient-to-b from-teal-100 p-5 rounded-lg"
             >
-              <!-- <i
-                class="fa-solid fa-location-dot text-secondary-color bg-orange-100 p-2 rounded-full"
-              ></i> -->
               <img
                 class="w-5 bg-orange-100 p-1 rounded-full inline"
                 src="images/location-dot.svg"
