--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
+    <link rel="stylesheet" href="tailwind.css" />
     <link rel="stylesheet" href="style-custom.css" />
-    <link rel="stylesheet" href="style.css" />
   </head>
   <body class="bg-gradient-to-b from-teal-200">
     <header
@@ -779,7 +779,7 @@
               <span class="text-gray-400">Buenos Aires, Argentina </span>
               <h3 class="text-2xl font-bold my-2">Argentina</h3>
               <img
-                class="hover:scale-x-105 transition-all duration-[3000ms] w-80 h-60"
+                class="hover:scale-x-105 transition-all duration-[3000ms] swiper-img"
                 src="images/dive.jpg"
                 alt=""
               />
@@ -835,7 +835,7 @@
               <span class="text-gray-400">Light, House </span>
               <h3 class="text-2xl font-bold my-2">Lighthouse</h3>
               <img
-                class="hover:scale-x-105 transition-all duration-[3000ms] w-80 h-60"
+                class="hover:scale-x-105 transition-all duration-[3000ms] swiper-img"
                 src="images/lighthouse.jpg"
                 alt=""
               />
@@ -891,7 +891,7 @@
               <span class="text-gray-400">Green, Forest </span>
               <h3 class="text-2xl font-bold my-2">Green Forest</h3>
               <img
-                class="hover:scale-x-105 transition-all duration-[3000ms] w-80 h-60"
+                class="hover:scale-x-105 transition-all duration-[3000ms] swiper-img"
                 src="images/forest.jpg"
                 alt=""
               />
@@ -939,22 +939,43 @@
             <div
               class="group-hover:bg-gradient-to-b from-teal-100 p-5 rounded-lg"
             >
-              <i
-                class="fa-solid fa-location-dot text-secondary-color bg-orange-100 p-2 rounded-full"
-              ></i>
-              <span class="text-gray-400">Lake, view </span>
-              <h3 class="text-2xl font-bold my-2">Lake view</h3>
               <img
-                class="hover:scale-x-105 transition-all duration-[3000ms] w-80 h-60"
+                class="w-5 bg-orange-100 p-1 rounded-full inline"
+                src="images/location-dot.svg"
+                alt="location"
+              />
+              <span class="text-gray-400">Green, Forest </span>
+              <h3 class="text-2xl font-bold my-2">Green Forest</h3>
+              <img
+                class="hover:scale-x-105 transition-all duration-[3000ms] swiper-img"
                 src="images/lake.jpg"
                 alt=""
               />
               <div class="text-gray-400 flex justify-around items-center mt-1">
-                <p>10 activities</p>
-                <div>
-                  <i class="fa-solid fa-map-location-dot"></i> 12 places
+                <div class="">
+                  <img
+                    class="w-5 inline mb-1"
+                    src="/images/person-biking-mountain.svg"
+                    alt="activities"
+                  />
+                  <span>10 activities </span>
                 </div>
-                <div><i class="fa-solid fa-calendar-days"></i> 1 week</div>
+                <div class="">
+                  <img
+                    class="w-5 inline mb-1"
+                    src="/images/map-location-dot.svg"
+                    alt="map"
+                  />
+                  <span> 12 places </span>
+                </div>
+                <div class="">
+                  <img
+                    class="w-4 inline mb-1"
+                    src="/images/calendar-days.svg"
+                    alt="calendar"
+                  />
+                  <span>1 week </span>
+                </div>
               </div>
               <hr class="border" />
               <div class="flex items-center mt-3 justify-around">
@@ -974,22 +995,43 @@
             <div
               class="group-hover:bg-gradient-to-b from-teal-100 p-5 rounded-lg"
             >
-              <i
-                class="fa-solid fa-location-dot text-secondary-color bg-orange-100 p-2 rounded-full"
-              ></i>
-              <span class="text-gray-400">sun , rise </span>
-              <h3 class="text-2xl font-bold my-2">Sunrise</h3>
               <img
-                class="hover:scale-x-105 transition-all duration-[3000ms] w-80 h-60"
+                class="w-5 bg-orange-100 p-1 rounded-full inline"
+                src="images/location-dot.svg"
+                alt="location"
+              />
+              <span class="text-gray-400">Green, Forest </span>
+              <h3 class="text-2xl font-bold my-2">Green Forest</h3>
+              <img
+                class="hover:scale-x-105 transition-all duration-[3000ms] swiper-img"
                 src="images/sunrise.jpg"
                 alt=""
               />
               <div class="text-gray-400 flex justify-around items-center mt-1">
-                <p>10 activities</p>
-                <div>
-                  <i class="fa-solid fa-map-location-dot"></i> 12 places
+                <div class="">
+                  <img
+                    class="w-5 inline mb-1"
+                    src="/images/person-biking-mountain.svg"
+                    alt="activities"
+                  />
+                  <span>10 activities </span>
                 </div>
-                <div><i class="fa-solid fa-calendar-days"></i> 1 week</div>
+                <div class="">
+                  <img
+                    class="w-5 inline mb-1"
+                    src="/images/map-location-dot.svg"
+                    alt="map"
+                  />
+                  <span> 12 places </span>
+                </div>
+                <div class="">
+                  <img
+                    class="w-4 inline mb-1"
+                    src="/images/calendar-days.svg"
+                    alt="calendar"
+                  />
+                  <span>1 week </span>
+                </div>
               </div>
               <hr class="border" />
               <div class="flex items-center mt-3 justify-around">
@@ -1009,22 +1051,43 @@
             <div
               class="group-hover:bg-gradient-to-b from-teal-100 p-5 rounded-lg"
             >
-              <i
-                class="fa-solid fa-location-dot text-secondary-color bg-orange-100 p-2 rounded-full"
-              ></i>
-              <span class="text-gray-400">Sun, set </span>
-              <h3 class="text-2xl font-bold my-2">Sunset</h3>
               <img
-                class="hover:scale-x-105 transition-all duration-[3000ms] w-80 h-60"
+                class="w-5 bg-orange-100 p-1 rounded-full inline"
+                src="images/location-dot.svg"
+                alt="location"
+              />
+              <span class="text-gray-400">Green, Forest </span>
+              <h3 class="text-2xl font-bold my-2">Green Forest</h3>
+              <img
+                class="hover:scale-x-105 transition-all duration-[3000ms] swiper-img"
                 src="images/sunset.jpg"
                 alt=""
               />
               <div class="text-gray-400 flex justify-around items-center mt-1">
-                <p>10 activities</p>
-                <div>
-                  <i class="fa-solid fa-map-location-dot"></i> 12 places
+                <div class="">
+                  <img
+                    class="w-5 inline mb-1"
+                    src="/images/person-biking-mountain.svg"
+                    alt="activities"
+                  />
+                  <span>10 activities </span>
                 </div>
-                <div><i class="fa-solid fa-calendar-days"></i> 1 week</div>
+                <div class="">
+                  <img
+                    class="w-5 inline mb-1"
+                    src="/images/map-location-dot.svg"
+                    alt="map"
+                  />
+                  <span> 12 places </span>
+                </div>
+                <div class="">
+                  <img
+                    class="w-4 inline mb-1"
+                    src="/images/calendar-days.svg"
+                    alt="calendar"
+                  />
+                  <span>1 week </span>
+                </div>
               </div>
               <hr class="border" />
               <div class="flex items-center mt-3 justify-around">
@@ -1082,10 +1145,10 @@
             spaceBetween: 50,
           },
         },
-        // pagination: {
-        //   el: ".swiper-pagination",
-        //   clickable: true,
-        // },
+        pagination: {
+          el: ".swiper-pagination",
+          clickable: true,
+        },
       });
     </script>
 
