--- a/index.html
+++ b/index.html
@@ -719,9 +719,9 @@
       </div>
       <div class="flex flex-wrap gap-5 justify-center items-center my-24">
         <div
-          class="group bg-gradient-to-b from-teal-200 hover:bg-teal-300 rounded-2xl p-10"
+          class="group bg-gradient-to-b from-teal-200 hover:bg-teal-300 rounded-2xl p-10 flex-col"
         >
-          <img class="w-64" src="images/tree.svg" alt="" />
+          <img class="" src="images/serve-icon1.png" alt="" />
           <h3
             class="group-hover:text-primary-color-dark text-center font-bold text-2xl mb-5"
           >
@@ -732,7 +732,7 @@
         <div
           class="mt-16 group bg-gradient-to-b from-teal-200 hover:bg-teal-300 rounded-2xl p-10"
         >
-          <img class="w-64" src="images/tree.svg" alt="" />
+          <img class="" src="images/serve-icon2.png" alt="" />
           <h3
             class="group-hover:text-primary-color-dark text-center font-bold text-2xl mb-5"
           >
@@ -743,7 +743,7 @@
         <div
           class="mt-32 group bg-gradient-to-b from-teal-200 hover:bg-teal-300 rounded-2xl p-10"
         >
-          <img class="w-64" src="images/tree.svg" alt="" />
+          <img class="" src="images/serve-icon3.png" alt="" />
           <h3
             class="group-hover:text-primary-color-dark text-center font-bold text-2xl mb-5"
           >
