--- a/index.html
+++ b/index.html
@@ -719,37 +719,47 @@
       </div>
       <div class="flex flex-wrap gap-5 justify-center items-center my-24">
         <div
-          class="group bg-gradient-to-b from-teal-200 hover:bg-teal-300 rounded-2xl p-10"
+          class="group bg-gradient-to-b from-teal-200 hover:bg-teal-300 rounded-2xl p-10 flex flex-col items-center"
         >
           <img class="" src="images/serve-icon1.png" alt="" />
           <h3
-            class="group-hover:text-primary-color-dark text-center font-bold text-2xl mb-5"
+            class="group-hover:text-primary-color-dark text-center font-bold text-2xl my-4"
           >
-            Lots of Choices
+            Customizable Private Tours
           </h3>
-          <p class="w-64 text-center">Lorem</p>
+          <p class="w-64 text-center">
+            Experience travel tailored just for you with our customizable
+            private tours. Whether you're interested in historical sites,
+            culinary delights.
+          </p>
         </div>
         <div
-          class="mt-16 group bg-gradient-to-b from-teal-200 hover:bg-teal-300 rounded-2xl p-10"
+          class="group bg-gradient-to-b from-teal-200 hover:bg-teal-300 rounded-2xl p-10 flex flex-col items-center"
         >
           <img class="" src="images/serve-icon2.png" alt="" />
           <h3
-            class="group-hover:text-primary-color-dark text-center font-bold text-2xl mb-5"
+            class="group-hover:text-primary-color-dark text-center font-bold text-2xl my-4"
           >
-            Lots of Choices
+            Adventure Excursions
           </h3>
-          <p class="w-64 text-center">Lorem</p>
+          <p class="w-64 text-center">
+            Get your adrenaline pumping with our adventure excursions designed
+            for thrill-seekers and nature enthusiasts.
+          </p>
         </div>
         <div
-          class="mt-32 group bg-gradient-to-b from-teal-200 hover:bg-teal-300 rounded-2xl p-10"
+          class="group bg-gradient-to-b from-teal-200 hover:bg-teal-300 rounded-2xl p-10 flex flex-col items-center"
         >
           <img class="" src="images/serve-icon3.png" alt="" />
           <h3
-            class="group-hover:text-primary-color-dark text-center font-bold text-2xl mb-5"
+            class="group-hover:text-primary-color-dark text-center font-bold text-2xl my-4"
           >
-            Lots of Choices
+            Cultural Immersion Tours
           </h3>
-          <p class="w-64 text-center">Lorem</p>
+          <p class="w-64 text-center">
+            Dive deep into the local culture with our immersive tours that go
+            beyond the typical tourist experience. Participate in traditional
+          </p>
         </div>
       </div>
     </section>
