about start. started css grid

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
     <!-- form section -->
     <section class="max-w-6xl w-full mx-auto py-24">
-      <div role="tablist" class="tabs tabs-lifted grid grid-cols-6">
+      <div role="tablist" class="tabs tabs-lifted grid grid-cols-6 px-10">
         <input
           type="radio"
           name="my_tabs_2"
@@ -763,7 +763,7 @@
     </section>
 
     <!-- carousel section -->
-    <section class="w-full mx-auto bg-[url('/images/lake.jpg')] bg-cover">
+    <section class="w-full mx-auto bg-[url('/images/lake.jpg')] bg-cover py-16">
       <div class="text-center pt-20">
         <h3 class="text-secondary-color font-bold text-2xl">
           EXPLORE WONDERFUL EXPERIENCE
@@ -1121,7 +1121,6 @@
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 448 512"
             >
-              <!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
               <path
                 d="M7.4 273.4C2.7 268.8 0 262.6 0 256s2.7-12.8 7.4-17.4l176-168c9.6-9.2 24.8-8.8 33.9 .8s8.8 24.8-.8 33.9L83.9 232 424 232c13.3 0 24 10.7 24 24s-10.7 24-24 24L83.9 280 216.6 406.6c9.6 9.2 9.9 24.3 .8 33.9s-24.3 9.9-33.9 .8l-176-168z"
                 fill="#9ca3af"
@@ -1134,7 +1133,6 @@
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 448 512"
             >
-              <!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
               <path
                 d="M440.6 273.4c4.7-4.5 7.4-10.8 7.4-17.4s-2.7-12.8-7.4-17.4l-176-168c-9.6-9.2-24.8-8.8-33.9 .8s-8.8 24.8 .8 33.9L364.1 232 24 232c-13.3 0-24 10.7-24 24s10.7 24 24 24l340.1 0L231.4 406.6c-9.6 9.2-9.9 24.3-.8 33.9s24.3 9.9 33.9 .8l176-168z"
                 fill="#9ca3af"
@@ -1145,6 +1143,21 @@
       </div>
     </section>
 
+    <!-- about  -->
+    <section class="h-screen py-20">
+      <div class="about-section-images">
+        <img
+          class="max-w-md max-h-96 about-image-1"
+          src="/images/leafs.jpg"
+          alt=""
+        />
+        <img
+          class="max-w-64 about-image-2"
+          src="/images/mountain3.jpg"
+          alt=""
+        />
+      </div>
+    </section>
     <!-- <script type="module" src="/main.js"></script> -->
 
     <!-- Swiper JS -->
