grid works for about section

--- a/index.html
+++ b/index.html
@@ -1144,7 +1144,10 @@
     </section>
 
     <!-- about  -->
-    <section class="h-screen py-20">
+    <section
+      class="h-screen py-20 grid grid-cols-1 lg:grid-cols-2 items-center"
+    >
+      <!-- grid in external css -->
       <div class="about-section-images">
         <img
           class="max-w-md max-h-96 about-image-1"
@@ -1156,6 +1159,37 @@
           src="/images/mountain3.jpg"
           alt=""
         />
+      </div>
+      <div class="about-text">
+        <h3>ABOUT NATURAL TRAVEL</h3>
+        <h2>World Best Travel Agency Company Since 2015.</h2>
+        <p>
+          Enjoy a seamless experience with our meticulously planned itineraries,
+          including convenient transportation, exclusive access to key
+          attractions, and authentic local experiences.
+        </p>
+        <ul>
+          <li>
+            Thrilling Activities: Experience activities like white-water
+            rafting, hiking, zip-lining, and scuba diving.
+          </li>
+
+          <li>
+            Certified Guides: Enjoy safe and exciting excursions with
+            professional guides.
+          </li>
+          <li>
+            Top-Notch Equipment: Use high-quality gear for all activities.
+          </li>
+        </ul>
+        <div class="">
+          13+ Year Experience 355+ Destination Collaboration 17+ Happy Customers
+        </div>
+        <button
+          class="text-white bg-primary-color-dark transition-all duration-700 px-10 py-5 mt-5 shadow-xl rounded-l-full rounded-r-full"
+        >
+          Find Tours
+        </button>
       </div>
     </section>
     <!-- <script type="module" src="/main.js"></script> -->
