--- a/index.html
+++ b/index.html
@@ -1145,23 +1145,25 @@
 
     <!-- about  -->
     <section
-      class="h-screen py-20 grid grid-cols-1 lg:grid-cols-2 items-center"
+      class="h-screen py-20 grid grid-cols-1 lg:grid-cols-2 items-center bg-gradient-to-b from-teal-200"
     >
       <!-- grid in external css -->
       <div class="about-section-images">
         <img
-          class="max-w-md max-h-96 about-image-1"
+          class="max-w-md max-h-96 about-image-1 rounded-2xl border-8 border-white"
           src="/images/leafs.jpg"
           alt=""
         />
         <img
-          class="max-w-64 about-image-2"
+          class="max-w-64 about-image-2 rounded-2xl border-8 border-white -mb-5"
           src="/images/mountain3.jpg"
           alt=""
         />
       </div>
-      <div class="about-text">
-        <h3>ABOUT NATURAL TRAVEL</h3>
+      <div class="about-text text-center">
+        <div class="title text-2xl font-bold text-primary-color-dark">
+          <h3>ABOUT NATURAL TRAVEL</h3>
+        </div>
         <h2>World Best Travel Agency Company Since 2015.</h2>
         <p>
           Enjoy a seamless experience with our meticulously planned itineraries,
