--- a/index.html
+++ b/index.html
@@ -1145,7 +1145,7 @@
 
     <!-- about  -->
     <section
-      class="h-screen py-20 grid grid-cols-1 lg:grid-cols-2 items-center bg-gradient-to-b from-teal-200"
+      class="h-screen p-20 grid grid-cols-1 lg:grid-cols-2 items-center bg-gradient-to-b from-teal-200"
     >
       <!-- grid in external css -->
       <div class="about-section-images">
@@ -1161,17 +1161,24 @@
         />
       </div>
       <div class="about-text text-center">
-        <div class="title text-2xl font-bold text-primary-color-dark">
-          <h3>ABOUT NATURAL TRAVEL</h3>
-        </div>
-        <h2>World Best Travel Agency Company Since 2015.</h2>
-        <p>
+        <h3 class="title text-xl font-bold text-primary-color-dark mt-16 mb-8">
+          About Natural Travel
+        </h3>
+        <h2 class="text-2xl font-bold mb-8">
+          World Best Travel Agency Company Since 2015.
+        </h2>
+        <p class="text-gray-500">
           Enjoy a seamless experience with our meticulously planned itineraries,
           including convenient transportation, exclusive access to key
           attractions, and authentic local experiences.
         </p>
         <ul>
           <li>
+            <img
+              class="bg-primary-color-dark w-4 h-4 rounded-full"
+              src="images/check.svg"
+              alt=""
+            />
             Thrilling Activities: Experience activities like white-water
             rafting, hiking, zip-lining, and scuba diving.
           </li>
