about text done

--- a/index.html
+++ b/index.html
@@ -1162,38 +1162,77 @@
       </div>
       <div class="about-text text-center">
         <h3 class="title text-xl font-bold text-primary-color-dark mt-16 mb-8">
-          About Natural Travel
+          ABOUT NATURAL TRAVEL
         </h3>
-        <h2 class="text-2xl font-bold mb-8">
+        <h2 class="text-3xl font-bold mb-8 w-2/3 mx-auto">
           World Best Travel Agency Company Since 2015.
         </h2>
-        <p class="text-gray-500">
+        <p class="text-gray-500 my-4">
           Enjoy a seamless experience with our meticulously planned itineraries,
           including convenient transportation, exclusive access to key
           attractions, and authentic local experiences.
         </p>
-        <ul>
-          <li>
+        <ul class="space-y-1">
+          <li class="flex items-center gap-3">
             <img
               class="bg-primary-color-dark w-4 h-4 rounded-full"
               src="images/check.svg"
               alt=""
             />
-            Thrilling Activities: Experience activities like white-water
-            rafting, hiking, zip-lining, and scuba diving.
+            <span>
+              Thrilling Activities: Experience activities like white-water
+              rafting, hiking, zip-lining, and scuba diving.
+            </span>
           </li>
-
-          <li>
-            Certified Guides: Enjoy safe and exciting excursions with
-            professional guides.
+          <li class="flex items-center gap-3">
+            <img
+              class="bg-primary-color-dark w-4 h-4 rounded-full"
+              src="images/check.svg"
+              alt=""
+            />
+            <span>
+              Certified Guides: Enjoy safe and exciting excursions with
+              professional guides.
+            </span>
           </li>
-          <li>
-            Top-Notch Equipment: Use high-quality gear for all activities.
+          <li class="flex items-center gap-3">
+            <img
+              class="bg-primary-color-dark w-4 h-4 rounded-full"
+              src="images/check.svg"
+              alt=""
+            />
+            <span>
+              Top-Notch Equipment: Use high-quality gear for all activities.
+            </span>
           </li>
         </ul>
-        <div class="">
-          13+ Year Experience 355+ Destination Collaboration 17+ Happy Customers
+
+        <div class="flex justify-evenly my-4">
+          <div class="">
+            <span class="text-3xl font-bold text-primary-color-dark">
+              13+
+            </span>
+
+            <p>Year Experience</p>
+          </div>
+
+          <div class="">
+            <span class="text-3xl font-bold text-primary-color-dark">
+              355+
+            </span>
+
+            <p>Destination Collaboration</p>
+          </div>
+
+          <div class="">
+            <span class="text-3xl font-bold text-primary-color-dark">
+              17+
+            </span>
+
+            <p>Happy Customers</p>
+          </div>
         </div>
+
         <button
           class="text-white bg-primary-color-dark transition-all duration-700 px-10 py-5 mt-5 shadow-xl rounded-l-full rounded-r-full"
         >
