--- a/index.html
+++ b/index.html
@@ -1160,20 +1160,20 @@
           alt=""
         />
       </div>
-      <div class="about-text text-center">
-        <h3 class="title text-xl font-bold text-primary-color-dark mt-16 mb-8">
+      <div class="text-center">
+        <h3 class="text-xl font-bold text-primary-color-dark mt-16 mb-8">
           ABOUT NATURAL TRAVEL
         </h3>
-        <h2 class="text-3xl font-bold mb-8 w-2/3 mx-auto">
+        <h2 class="text-3xl font-bold mb-8">
           World Best Travel Agency Company Since 2015.
         </h2>
         <p class="text-gray-500 my-4">
           Enjoy a seamless experience with our meticulously planned itineraries,
           including convenient transportation, exclusive access to key
-          attractions, and authentic local experiences.
+          attractions and experiences.
         </p>
-        <ul class="space-y-1">
-          <li class="flex items-center gap-3">
+        <ul class="space-y-5 my-4 text-left">
+          <li class="flex items-start gap-3">
             <img
               class="bg-primary-color-dark w-4 h-4 rounded-full"
               src="images/check.svg"
@@ -1181,10 +1181,10 @@
             />
             <span>
               Thrilling Activities: Experience activities like white-water
-              rafting, hiking, zip-lining, and scuba diving.
+              rafting and scuba diving.
             </span>
           </li>
-          <li class="flex items-center gap-3">
+          <li class="flex gap-3">
             <img
               class="bg-primary-color-dark w-4 h-4 rounded-full"
               src="images/check.svg"
@@ -1195,7 +1195,7 @@
               professional guides.
             </span>
           </li>
-          <li class="flex items-center gap-3">
+          <li class="flex gap-3">
             <img
               class="bg-primary-color-dark w-4 h-4 rounded-full"
               src="images/check.svg"
@@ -1207,7 +1207,7 @@
           </li>
         </ul>
 
-        <div class="flex justify-evenly my-4">
+        <div class="flex justify-center gap-5 my-4">
           <div class="">
             <span class="text-3xl font-bold text-primary-color-dark">
               13+
