--- a/index.html
+++ b/index.html
@@ -1160,8 +1160,11 @@
           alt=""
         />
       </div>
+
+      <!-- about text -->
+
       <div class="text-center">
-        <h3 class="text-xl font-bold text-primary-color-dark mt-16 mb-8">
+        <h3 class="text-xl font-bold text-primary-color-dark mt-16 mb-8 w-60">
           ABOUT NATURAL TRAVEL
         </h3>
         <h2 class="text-3xl font-bold mb-8">
@@ -1179,7 +1182,7 @@
               src="images/check.svg"
               alt=""
             />
-            <span>
+            <span class="-mt-1">
               Thrilling Activities: Experience activities like white-water
               rafting and scuba diving.
             </span>
@@ -1190,7 +1193,7 @@
               src="images/check.svg"
               alt=""
             />
-            <span>
+            <span class="-mt-1">
               Certified Guides: Enjoy safe and exciting excursions with
               professional guides.
             </span>
@@ -1201,7 +1204,7 @@
               src="images/check.svg"
               alt=""
             />
-            <span>
+            <span class="-mt-1">
               Top-Notch Equipment: Use high-quality gear for all activities.
             </span>
           </li>
@@ -1240,8 +1243,9 @@
         </button>
       </div>
     </section>
-    <!-- <script type="module" src="/main.js"></script> -->
 
+    <!-- destinations -->
+    <section></section>
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
