--- a/index.html
+++ b/index.html
@@ -5,12 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/images/nt-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Natural Travel</title>
-    <!-- <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-    /> -->
-    <link rel="stylesheet" href="swiper-bundle.css" />
 
+    <link rel="stylesheet" href="swiper-bundle.css" />
     <link rel="stylesheet" href="tailwind.css" />
     <link rel="stylesheet" href="style-custom.css" />
   </head>
@@ -1145,7 +1141,7 @@
 
     <!-- about  -->
     <section
-      class="h-screen p-20 grid grid-cols-1 lg:grid-cols-2 items-center bg-gradient-to-b from-teal-200"
+      class="h-screen p-10 grid grid-cols-1 lg:grid-cols-2 items-center bg-gradient-to-b from-teal-200"
     >
       <!-- grid in external css -->
       <div class="about-section-images">
@@ -1163,22 +1159,23 @@
 
       <!-- about text -->
 
-      <div class="text-center">
-        <h3 class="text-xl font-bold text-primary-color-dark mt-16 mb-8 w-60">
+      <div class="text-center jost-font text-xl">
+        <h3 class="font-bold text-primary-color-dark mt-16 mb-8 w-64 mx-auto">
           ABOUT NATURAL TRAVEL
         </h3>
-        <h2 class="text-3xl font-bold mb-8">
+        <h2 class="text-3xl font-bold mb-8 w-64 mx-auto">
           World Best Travel Agency Company Since 2015.
         </h2>
-        <p class="text-gray-500 my-4">
+        <p class="text-gray-500 my-6">
           Enjoy a seamless experience with our meticulously planned itineraries,
           including convenient transportation, exclusive access to key
           attractions and experiences.
         </p>
+        <!-- list items -->
         <ul class="space-y-5 my-4 text-left">
           <li class="flex items-start gap-3">
             <img
-              class="bg-primary-color-dark w-4 h-4 rounded-full"
+              class="bg-primary-color-dark w-5 h-5 p-1 rounded-full"
               src="images/check.svg"
               alt=""
             />
@@ -1189,7 +1186,7 @@
           </li>
           <li class="flex gap-3">
             <img
-              class="bg-primary-color-dark w-4 h-4 rounded-full"
+              class="bg-primary-color-dark w-5 h-5 p-1 rounded-full"
               src="images/check.svg"
               alt=""
             />
@@ -1200,7 +1197,7 @@
           </li>
           <li class="flex gap-3">
             <img
-              class="bg-primary-color-dark w-4 h-4 rounded-full"
+              class="bg-primary-color-dark w-5 h-5 p-1 rounded-full"
               src="images/check.svg"
               alt=""
             />
@@ -1209,7 +1206,7 @@
             </span>
           </li>
         </ul>
-
+        <!-- numbers -->
         <div class="flex justify-center gap-5 my-4">
           <div class="">
             <span class="text-3xl font-bold text-primary-color-dark">
@@ -1245,7 +1242,18 @@
     </section>
 
     <!-- destinations -->
-    <section></section>
+
+    <section class="h-screen p-10 bg-gradient-to-b from-teal-200">
+      <div class="text-center jost-font text-xl">
+        <h3 class="font-bold text-primary-color-dark mt-16 mb-8 w-64 mx-auto">
+          Top Destinations
+        </h3>
+        <h2 class="text-3xl font-bold mb-8 w-64 mx-auto">
+          Explore the Beauty of The World
+        </h2>
+      </div>
+    </section>
+
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
