--- a/index.html
+++ b/index.html
@@ -769,7 +769,7 @@
           in the World
         </h1>
       </div>
-      <div class="max-w-6xl swiper swiper2">
+      <div class="max-w-6xl swiper swiper2 p-3">
         <div class="swiper-wrapper">
           <div class="swiper-slide swiper2 rounded-lg group">
             <div
@@ -1141,7 +1141,7 @@
 
     <!-- about  -->
     <section
-      class="h-screen p-10 grid grid-cols-1 lg:grid-cols-2 items-center bg-gradient-to-b from-teal-200"
+      class="p-10 grid grid-cols-1 lg:grid-cols-2 items-center bg-gradient-to-b from-teal-200"
     >
       <!-- grid in external css -->
       <div class="about-section-images">
@@ -1163,7 +1163,7 @@
         <h3 class="font-bold text-primary-color-dark mt-16 mb-8 w-64 mx-auto">
           ABOUT NATURAL TRAVEL
         </h3>
-        <h2 class="text-3xl font-bold mb-8 w-64 mx-auto">
+        <h2 class="text-3xl font-bold mb-8 min-w-64 mx-auto">
           World Best Travel Agency Company Since 2015.
         </h2>
         <p class="text-gray-500 my-6">
@@ -1243,12 +1243,12 @@
 
     <!-- destinations -->
 
-    <section class="h-screen p-10 bg-gradient-to-b from-teal-200">
+    <section class="p-10 bg-gradient-to-b from-teal-200">
       <div class="text-center jost-font text-xl">
-        <h3 class="font-bold text-primary-color-dark mt-16 mb-8 w-64 mx-auto">
+        <h3 class="font-bold text-primary-color-dark my-8 w-64 mx-auto">
           Top Destinations
         </h3>
-        <h2 class="text-3xl font-bold mb-8 w-64 mx-auto">
+        <h2 class="text-3xl font-bold mb-8 min-w-80 mx-auto">
           Explore the Beauty of The World
         </h2>
       </div>
