--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
     </header>
 
-    <!-- swiper slider -->
+    <!-- top swiper slider -->
     <section class="max-w-6xl w-full mx-auto">
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
@@ -1251,6 +1251,63 @@
         <h2 class="text-3xl font-bold mb-8 min-w-80 mx-auto">
           Explore the Beauty of The World
         </h2>
+      </div>
+
+      <div class="max-w-6xl swiper swiper2 p-3">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide swiper2 rounded-lg group">
+            <div
+              class="group-hover:bg-gradient-to-b from-teal-100 p-5 rounded-lg"
+            >
+              <!-- daisyui card -->
+              <div class="card bg-base-100 w-96 shadow-xl">
+                <figure>
+                  <img
+                    src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
+                    alt="Shoes"
+                  />
+                </figure>
+                <div class="card-body">
+                  <h2 class="card-title">
+                    Shoes!
+                    <div class="badge badge-secondary">NEW</div>
+                  </h2>
+                  <p>If a dog chews shoes whose shoes does he choose?</p>
+                  <div class="card-actions justify-end">
+                    <div class="badge badge-outline">Fashion</div>
+                    <div class="badge badge-outline">Products</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide swiper2 rounded-lg group">
+            <div
+              class="group-hover:bg-gradient-to-b from-teal-100 p-5 rounded-lg"
+            >
+              <!-- daisyui card -->
+              <div class="card bg-base-100 w-96 shadow-xl">
+                <figure>
+                  <img
+                    src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
+                    alt="Shoes"
+                  />
+                </figure>
+                <div class="card-body">
+                  <h2 class="card-title">
+                    Shoes!
+                    <div class="badge badge-secondary">NEW</div>
+                  </h2>
+                  <p>If a dog chews shoes whose shoes does he choose?</p>
+                  <div class="card-actions justify-end">
+                    <div class="badge badge-outline">Fashion</div>
+                    <div class="badge badge-outline">Products</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
