top destination slider start

--- a/index.html
+++ b/index.html
@@ -1253,55 +1253,34 @@
         </h2>
       </div>
 
-      <div class="max-w-6xl swiper swiper2 p-3">
+      <!--top destination carousel -->
+
+      <div class="max-w-6xl swiper swiper3 p-3">
         <div class="swiper-wrapper">
-          <div class="swiper-slide swiper2 rounded-lg group">
-            <div
-              class="group-hover:bg-gradient-to-b from-teal-100 p-5 rounded-lg"
-            >
+          <div class="swiper-slide swiper3 rounded-lg group">
+            <div class="from-teal-100 p-5 rounded-lg">
               <!-- daisyui card -->
-              <div class="card bg-base-100 w-96 shadow-xl">
-                <figure>
+
+              <div class="card bg-base-100 w-11/12 shadow-xl">
+                <figure class="relative">
                   <img
                     src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
-                    alt="Shoes"
+                    alt=""
+                    class=""
                   />
-                </figure>
-                <div class="card-body">
-                  <h2 class="card-title">
-                    Shoes!
-                    <div class="badge badge-secondary">NEW</div>
-                  </h2>
-                  <p>If a dog chews shoes whose shoes does he choose?</p>
-                  <div class="card-actions justify-end">
-                    <div class="badge badge-outline">Fashion</div>
-                    <div class="badge badge-outline">Products</div>
+                  <div
+                    class="badge p-4 bg-secondary-color text-white border-white border-2 absolute top-5 right-5 font-bold"
+                  >
+                    $299
                   </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide swiper2 rounded-lg group">
-            <div
-              class="group-hover:bg-gradient-to-b from-teal-100 p-5 rounded-lg"
-            >
-              <!-- daisyui card -->
-              <div class="card bg-base-100 w-96 shadow-xl">
-                <figure>
-                  <img
-                    src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
-                    alt="Shoes"
-                  />
                 </figure>
                 <div class="card-body">
-                  <h2 class="card-title">
-                    Shoes!
-                    <div class="badge badge-secondary">NEW</div>
-                  </h2>
-                  <p>If a dog chews shoes whose shoes does he choose?</p>
-                  <div class="card-actions justify-end">
-                    <div class="badge badge-outline">Fashion</div>
-                    <div class="badge badge-outline">Products</div>
+                  <p>RIO, Brazil</p>
+
+                  <h2 class="card-title">Enjoy the beauty of Brazil city</h2>
+                  <div class="flex">
+                    <img class="w-6" src="/images/star.svg" alt="" />
+                    <span> 4.9 (1.7k Review)</span>
                   </div>
                 </div>
               </div>
