--- a/index.html
+++ b/index.html
@@ -1241,10 +1241,10 @@
       </div>
     </section>
 
-    <!-- destinations -->
+    <!--top destinations -->
 
-    <section class="p-10 bg-gradient-to-b from-teal-200">
-      <div class="text-center jost-font text-xl">
+    <section class="bg-gradient-to-b from-teal-200 jost-font">
+      <div class="text-center text-xl">
         <h3 class="font-bold text-primary-color-dark my-8 w-64 mx-auto">
           Top Destinations
         </h3>
@@ -1261,7 +1261,7 @@
             <div class="from-teal-100 p-5 rounded-lg">
               <!-- daisyui card -->
 
-              <div class="card bg-base-100 w-11/12 shadow-xl">
+              <div class="card bg-base-100 shadow-xl">
                 <figure class="relative">
                   <img
                     src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
