--- a/index.html
+++ b/index.html
@@ -1253,9 +1253,9 @@
         </h2>
       </div>
 
-      <!--top destination carousel -->
+      <!--top destination carousel swiper 3 -->
 
-      <div class="max-w-6xl swiper swiper3 p-3">
+      <div class="max-w-6xl swiper p-3">
         <div class="swiper-wrapper">
           <div class="swiper-slide swiper3 rounded-lg group">
             <div class="from-teal-100 p-5 rounded-lg">
@@ -1288,7 +1288,7 @@
 
               <div class="card bg-base-100 shadow-xl">
                 <figure class="relative">
-                  <img src="/images/cycle.jpg" alt="" class="" />
+                  <img src="/images/" alt="" class="" />
                   <div
                     class="badge p-4 bg-secondary-color text-white border-white border-2 absolute top-5 right-5 font-bold"
                   >
@@ -1296,7 +1296,7 @@
                   </div>
                 </figure>
                 <div class="card-body">
-                  <p>RIO, Brazil</p>
+                  <p>RIO</p>
 
                   <h2 class="card-title">Enjoy the beauty of Brazil city</h2>
                   <div class="flex gap-1">
@@ -1307,32 +1307,32 @@
               </div>
             </div>
           </div>
+        </div>
 
-          <div class="swiper-btn">
-            <div class="swiper-button-prev">
-              <svg
-                width="20px"
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 448 512"
-              >
-                <path
-                  d="M7.4 273.4C2.7 268.8 0 262.6 0 256s2.7-12.8 7.4-17.4l176-168c9.6-9.2 24.8-8.8 33.9 .8s8.8 24.8-.8 33.9L83.9 232 424 232c13.3 0 24 10.7 24 24s-10.7 24-24 24L83.9 280 216.6 406.6c9.6 9.2 9.9 24.3 .8 33.9s-24.3 9.9-33.9 .8l-176-168z"
-                  fill="#9ca3af"
-                />
-              </svg>
-            </div>
-            <div class="swiper-button-next">
-              <svg
-                width="20px"
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 448 512"
-              >
-                <path
-                  d="M440.6 273.4c4.7-4.5 7.4-10.8 7.4-17.4s-2.7-12.8-7.4-17.4l-176-168c-9.6-9.2-24.8-8.8-33.9 .8s-8.8 24.8 .8 33.9L364.1 232 24 232c-13.3 0-24 10.7-24 24s10.7 24 24 24l340.1 0L231.4 406.6c-9.6 9.2-9.9 24.3-.8 33.9s24.3 9.9 33.9 .8l176-168z"
-                  fill="#9ca3af"
-                />
-              </svg>
-            </div>
+        <div class="swiper-btn">
+          <div class="swiper-button-prev swiper3">
+            <svg
+              width="20px"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 448 512"
+            >
+              <path
+                d="M7.4 273.4C2.7 268.8 0 262.6 0 256s2.7-12.8 7.4-17.4l176-168c9.6-9.2 24.8-8.8 33.9 .8s8.8 24.8-.8 33.9L83.9 232 424 232c13.3 0 24 10.7 24 24s-10.7 24-24 24L83.9 280 216.6 406.6c9.6 9.2 9.9 24.3 .8 33.9s-24.3 9.9-33.9 .8l-176-168z"
+                fill="#9ca3af"
+              />
+            </svg>
+          </div>
+          <div class="swiper-button-next swiper3">
+            <svg
+              width="20px"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 448 512"
+            >
+              <path
+                d="M440.6 273.4c4.7-4.5 7.4-10.8 7.4-17.4s-2.7-12.8-7.4-17.4l-176-168c-9.6-9.2-24.8-8.8-33.9 .8s-8.8 24.8 .8 33.9L364.1 232 24 232c-13.3 0-24 10.7-24 24s10.7 24 24 24l340.1 0L231.4 406.6c-9.6 9.2-9.9 24.3-.8 33.9s24.3 9.9 33.9 .8l176-168z"
+                fill="#9ca3af"
+              />
+            </svg>
           </div>
         </div>
       </div>
